# AlgorithmicTrader

./: .gitignore  README.md  backtest_log.txt  pyproject.toml  requirements.txt  test_live_config.py  test_rolling_buffer.py
Krypto_Daten/: BTCUSDT_15M_20230101_to_20230215.csv  BTCUSDT_30M_20240101_to_20240311.csv  download_binance_data.py
assets/: param_analyzer.css
config/: RSI_simple.yaml  RSI_tick_simple.yaml  VP_VWAP_trend.yaml  VWAP_trend.yaml  alpha_meme.yaml  beta.yaml  coin_full.yaml  coin_listing_short.yaml  coin_short.yaml  ema.yaml  fib_trend.yaml  fvg.yaml  gamma_short.yaml  live_coin_listing_short.yaml  live_short_tha_bich.yaml  mean3_reversion_HTF.yaml  mean_5m_regimes.yaml  mean_5m_regimes_BOS.yaml  mean_5m_regimes_VSCBR.yaml  mean_RSI_TTT.yaml  mean_continous_phases.yaml  mean_ema.yaml  mean_kalman_2TFs_vwap_GARCH_VIX.yaml  mean_kalman_vwap.yaml  mean_kalman_vwap_2TFs.yaml  mean_kalman_vwap_GARCH.yaml  mean_reversion_HTF.yaml  short_tha_bich.yaml  template.yaml  test_custom_data.yaml
execution/: FVG_execution.py  FVG_execution_crypto.py  Future_Test_Strat_execution.py  RSI_simple_execution.py  RSI_tick_simple_execution.py  alpha_meme_execution.py  bar_execution.py  beta_execution.py  debug.py  debug_skript.py  ema_execution.py  mean2_reversion_HTF_execution.py  mean3_reversion_HTF_execution.py  mean_5m_regimes_BOS_execution.py  mean_5m_regimes_VSCBR_execution.py  mean_5m_regimes_execution.py  mean_RSI_TTT_execution.py  mean_continous_phases_execution.py  mean_ema_execution.py  mean_kalman_2TFs_vwap_GARCH_VIX_execution.py  qs_test.py  run_backtest.py  (+7 more)
(+286 files in other folders)
