[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AlgorithmicTrader"
version = "0.1.0"
description = "Your Algorithmic Trading Research/Backtest Framework"
authors = [
    { name="Ferdi" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
